src/test/ui/fn/implied-bounds-unnorm-associated-type-4.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/implied-bounds-unnorm-associated-type-4.rs:21:10
   |
LL |     let y = f(&x, ());
   |               -- borrow of `x` occurs here
LL |     drop(x);
   |          ^ move out of `x` occurs here
LL |
LL |     println!("{}", y);
   |                    - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
